--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ borsh = "0.9.1"
 clap = "2.33.3"
 console = "0.15.0"
 env_logger = "0.9.0"
-infer = "0.5.0"
+futures = "0.3.17"
+infer = { version = "0.5.0", default-features = false }
 indicatif = "0.16.2"
 jsonwebkey = { version = "0.3.4", features = [ "pkcs-convert" ] }
 log = "0.4.14"
