--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,49 +1,6 @@
-[package]
-name = "metaplex-cli"
-authors = ["calebeverett <caleb@calebeverett.io>"]
-version = "0.1.0"
-edition = "2018"
-license = "Apache-2.0"
-repository = "https://github.com/CalebEverett/metaplex-cli"
+[workspace]
 
-[lib]
-name = "metaplex_cli_lib"
-path = "src/lib.rs"
-
-[dependencies]
-arrayref = "0.3.6"
-async-trait = "0.1.51"
-base64 = "0.13.0"
-borsh = "0.9.1"
-clap = "2.33.3"
-console = "0.15.0"
-env_logger = "0.9.0"
-futures = "0.3.17"
-infer = { version = "0.5.0", default-features = false }
-indicatif = "0.16.2"
-jsonwebkey = { version = "0.3.4", features = [ "pkcs-convert" ] }
-log = "0.4.14"
-metaplex = { git = "https://github.com/metaplex-foundation/metaplex", features = [ "no-entrypoint" ] }
-metaplex-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex", features = [ "no-entrypoint" ] }
-num-bigint = { version = "0.4.2", features = [ "serde" ] }
-num-traits = "0.2.14"
-ring = {version = "0.16.20", features = [ "std" ] }
-reqwest = { version = "0.11", features = ["json"] }
-serde = "1.0.130"
-serde_derive = "1.0.130"
-serde_json = "1.0.68"
-solana-account-decoder = "1.8.0"
-solana-clap-utils = "1.8.0"
-solana-cli-config = "1.8.0"
-solana-cli-output = "1.8.0"
-solana-client = "1.8.0"
-solana-remote-wallet = "1.8.0"
-solana-logger = "1.8.0"
-solana-sdk = "1.8.0"
-spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
-spl-associated-token-account = "1.0.3"
-spl-memo = { version = "3.0.1", features = ["no-entrypoint"] }
-thiserror = "1.0.30"
-tokio = { version = "1", features = ["full"] }
-url = "2.2.2"
-
+members = [
+    "metaplex_cli",
+    "arweave_rs",
+]
