--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          sudo apt-get update
           rustup install nightly
           cargo --version
-          docker --version
-      - run: |
-          sudo apt-get update
-          sudo apt-get install -y openssl --allow-unauthenticated
-          sudo apt-get install -y libssl-dev --allow-unauthenticated
-          sudo apt-get install -y libssl1.1 --allow-unauthenticated
-          sudo apt-get install -y libudev-dev --allow-unauthenticated
-          sh -c "$(curl -sSfL https://release.solana.com/v1.8.0/install)"
-          export PATH=~/.local/share/solana/install/active_release/bin:$PATH
+          # docker --version          
+          # sudo apt-get install -y openssl --allow-unauthenticated
+          # sudo apt-get install -y libssl-dev --allow-unauthenticated
+          # sudo apt-get install -y libssl1.1 --allow-unauthenticated
+          # sudo apt-get install -y libudev-dev --allow-unauthenticated
+          # sh -c "$(curl -sSfL https://release.solana.com/v1.8.0/install)"
+          # export PATH=~/.local/share/solana/install/active_release/bin:$PATH
           # solana-install info
           # solana-keygen new --no-bip39-passphrase
           # solana-test-validator --quiet &
