--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       - run: |
           sudo apt-get update
           rustup install nightly
+          rustup default nightly
           cargo --version
           # docker --version          
           # sudo apt-get install -y openssl --allow-unauthenticated
