--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,15 @@ jobs:
           rustup install nightly
           rustup default nightly
           cargo --version
-          # docker --version          
-          # sudo apt-get install -y openssl --allow-unauthenticated
-          # sudo apt-get install -y libssl-dev --allow-unauthenticated
-          # sudo apt-get install -y libssl1.1 --allow-unauthenticated
-          # sudo apt-get install -y libudev-dev --allow-unauthenticated
-          # sh -c "$(curl -sSfL https://release.solana.com/v1.8.0/install)"
-          # export PATH=~/.local/share/solana/install/active_release/bin:$PATH
-          # solana-install info
-          # solana-keygen new --no-bip39-passphrase
+          docker --version          
+          sudo apt-get install -y openssl --allow-unauthenticated
+          sudo apt-get install -y libssl-dev --allow-unauthenticated
+          sudo apt-get install -y libssl1.1 --allow-unauthenticated
+          sudo apt-get install -y libudev-dev --allow-unauthenticated
+          sh -c "$(curl -sSfL https://release.solana.com/v1.8.0/install)"
+          export PATH=~/.local/share/solana/install/active_release/bin:$PATH
+          solana-install info
+          solana-keygen new --no-bip39-passphrase
           # solana-test-validator --quiet &
           # git clone https://github.com/textury/arlocal.git
           # cd arlocal
