add arlocal service to ci

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,11 @@ on:
 jobs:
   Build:
     runs-on: ubuntu-20.04
+    services:
+      arlocal:
+          image: calebeverett/arlocal
+          ports:
+            - 1984:1984
     steps:
       - uses: actions/checkout@v2
       - run: |
@@ -28,10 +33,6 @@ jobs:
           solana-install info
           solana-keygen new --no-bip39-passphrase
           # solana-test-validator --quiet &
-          # git clone https://github.com/textury/arlocal.git
-          # cd arlocal
-          # npx arlocal
-          # cd ..
           cargo build
-          cargo test
+          cargo test -- --no-capture
           
