add main to arload

--- a/metaplex_cli/Cargo.toml
+++ b/metaplex_cli/Cargo.toml
@@ -7,11 +7,11 @@ license = "Apache-2.0"
 repository = "https://github.com/CalebEverett/metaplex-cli"
 
 [dependencies]
-# arrayref = "0.3.6"
-arweave_rs = { path = "../arweave_rs" }
 borsh = "0.9.1"
 clap = "2.33.3"
 console = "0.15.0"
+futures = "0.3.17"
+glob = "0.3.0"
 infer = { version = "0.5.0", default-features = false }
 indicatif = "0.16.2"
 log = "0.4.14"
