--- a/arload/Cargo.toml
+++ b/arload/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "arweave_rs"
+name = "arload"
 authors = ["calebeverett <caleb@calebeverett.io>"]
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 repository = "https://github.com/CalebEverett/metaplex-cli"
+
+[lib]
+name = "arload"
+path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.44"
@@ -12,6 +16,8 @@ async-trait = "0.1.51"
 base64 = "0.13.0"
 borsh = "0.9.1"
 blake3 = "1.1.0"
+chrono = { version = "0.4.19", features = ["serde"] }
+clap = "2.33.3"
 env_logger = "0.9.0"
 futures = "0.3.17"
 glob = "0.3.0"
@@ -24,10 +30,9 @@ num-traits = "0.2.14"
 ring = {version = "0.16.20", features = [ "std" ] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = "1.0.130"
-serde-aux = "2.3.0"
 serde_derive = "1.0.130"
 serde_json = "1.0.68"
 thiserror = "1.0.30"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
 url = "2.2.2"
 
